added css file started to fill in readme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Nikki's Life</title>
   </head>
   <body>
+    <h1>Nikki Ricks</h1>
+    <p>
+      This is an exercise to chart the winding path of our personal and
+      professional lives and how they don't always intersect with our happiness.
+    </p>
     <div id="chart_div" style="width: 1300px; height: 500px;"></div>
   </body>
   <script
