started adding css styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>Nikki's Life</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
       This is an exercise to chart the winding path of our personal and
       professional lives and how they don't always intersect with our happiness.
     </p>
-    <div id="chart_div" style="width: 1300px; height: 500px;"></div>
+    <div id="chart_div"></div>
   </body>
   <script
     type="text/javascript"
