added vertical text next to chart

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   </head>
   <body>
     <h1>Nikki Ricks</h1>
+
     <p>
       This is an exercise to chart the winding path of our personal and
       professional lives and how they don't always intersect with our happiness.
     </p>
-    <div id="chart_div"></div>
+
+    <div class="chart">
+      <p class="happiness">Happiness</p>
+      <div id="chart_div"></div>
+    </div>
   </body>
   <script
     type="text/javascript"
