added social media links

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <p class="happiness">Happiness</p>
       <div id="chart_div"></div>
     </div>
+
+    <footer>
+      <div id="social-media-links">
+        <a href="https://github.com/nikkiricks">github</a>
+        <a href="https://www.linkedin.com/in/nikki-ricks/">linkedin</a>
+        <a href="https://twitter.com/nikkiricks">twitter</a>
+      </div>
+    </footer>
   </body>
   <script
     type="text/javascript"
